# weather-cli

./: .gitignore  .gitnore  GitHub  GitHub.pub  LICENSE  README.md  pyproject.toml
weather/: api.py  cli.py
